# desafio_tecnico_monks

./: .dockerignore  .env.docker  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  init-db.sh  pyproject.toml
api/: api.py  main.py  polars.py
api/auth/: dependencies.py  services.py
api/config/: config.py
api/data/: .~lock.users.csv#  users.csv
api/dtos/: metricFilterParams.py
api/models/: myLoginRequestForm.py
api/repositories/: metrics_csv_repository.py  metrics_db_repository.py  metrics_repository.py  user_csv_repository.py  user_repository.py
api/scripts/: generate_hash.py
api/seeds/: metrics_seed.py
api/utils/: timing.py
frontend/: index.html  scripts.js  style.css
tests/: test_api.py
