[project]
name = "desafio-tecnico-monks"
version = "0.1.0"
description = ""
authors = [
    {name = "Alekssandher",email = "94875660+Alekssandher@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpie (>=3.2.4,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
